# EAR

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AUTHORING.md  CONCEPTS.md  CONCURRENCY.md  EFFICIENCY.md  ENTERPRISE_AGI.md  GETTING_STARTED.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  WHITEPAPER.md  WHITEPAPER_ENGLISH.md
ear/: __init__.py  _safe_eval.py  acquirer.py  adaptation.py  adhyayana.py  adversary.py  anubhava.py  anukulana.py  anushthana.py  anveshana.py  approval.py  arambha.py  assessor.py  auditor.py  authority.py  bhuddi.py  carbon.py  caveman.py  coder.py  compiler.py  contract.py  dashboard.py  decider.py  delegator.py  deliberator.py  dharma.py  discoverer.py  energy.py  english.py  enterprise.py  epistemic.py  evolution.py  evolution_loop.py  evolver.py  examiner.py  exchange.py  executor.py  explainer.py  goal.py  governor.py  (+85 more)
ear/integrations/: __init__.py  dspy_backend.py  evolve_backend.py  langchain_backend.py  langgraph_backend.py  llamaindex_backend.py  otel_backend.py  skillopt_backend.py
english/: __init__.py  adapter.py  composer.py  deliberator.py  discoverer.py  evidence.py  experience.py  governor.py  initializer.py  model_binding.py  reasoner.py  safe_evaluator.py  selector.py  workflow.py
english/integrations/: __init__.py  evolve_backend.py  skillopt_backend.py
examples/: credit_risk_guru.ipynb  credit_risk_guru_english_llm.ipynb  credit_risk_guru_english_runtime.ipynb  credit_risk_guru_ksetra.ipynb  sales_mis_guru.py
examples/credit_risk_stack/: memory.md  policy.md  workflow.md
examples/credit_risk_stack/evaluations/: approve-strong-applicant.md  block-oversized-loan.md
examples/sales_mis_stack/: memory.md  persona.md  policy.md  process.md  skills.md  workflow.md
examples/sales_mis_stack/Sales MIS/: bank_daily_sales_2025.xlsx  bank_daily_sales_dashboard_2025.xlsx
examples/sales_mis_stack/intents/: step1-load.md  step2-sanity-check.md  step3-slice-and-dice.md  step4-dashboard-validation.md
examples/sales_mis_stack/knowledge/: mis-manual.md
examples/sales_mis_stack/tools/: dump_tool_loop_prompts.py  render_dashboard.py
tests/: test_adversary.py  test_authority.py  test_carbon.py  test_coder.py  test_cognition.py  test_compiler.py  test_ear.py  test_efficiency.py  test_english_aliases.py  test_english_package.py  test_enterprise.py  test_evolution.py  test_operational_plane.py  test_parallel.py  test_pariksha.py  test_sales_mis_example.py  test_stack.py  test_store.py
tests/fixtures/: fake_mcp_server.py  mcp_stdio_server.py
tests/fixtures/command_centres/aawdfc/: SKILL.md
tests/fixtures/command_centres/aecc/: SKILL.md
tests/fixtures/command_centres/afcc/: SKILL.md
tests/fixtures/command_centres/agcc/: SKILL.md
tests/fixtures/command_centres/aitcc/: SKILL.md
(+47 files in other folders)
